CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(ConvertMedicalImageFile)

INCLUDE_REGULAR_EXPRESSION("^.*$")

FIND_PACKAGE(ITK)
IF(ITK_FOUND)
	INCLUDE(${USE_ITK_FILE})
ELSE(ITK_FOUND)
	MESSAGE(FATAL_ERROR "ITK NOT FOUND. PLEASE SET ITK_DIR.")
ENDIF(ITK_FOUND)

#SET(CMAKE_MODULE_PATH ${ITK_SOURCE_DIR}/CMake)

ADD_EXECUTABLE(ConvertMedicalImageFile convert_medical_image_file.cpp)
TARGET_LINK_LIBRARIES(ConvertMedicalImageFile ITKIO ITKStatistics ITKNumerics)


